tests/ui/traits/inductive-overflow/supertrait.stderr
error[E0275]: overflow evaluating the requirement `NoClone: Magic`
  --> $DIR/supertrait.rs:13:18
   |
LL |     let (a, b) = copy(NoClone);
   |                  ^^^^^^^^^^^^^
   |
note: required for `NoClone` to implement `Magic`
  --> $DIR/supertrait.rs:5:16
   |
LL | impl<T: Magic> Magic for T {}
   |         -----  ^^^^^     ^
   |         |
   |         unsatisfied trait bound introduced here
note: required by a bound in `copy`
  --> $DIR/supertrait.rs:7:12
   |
LL | fn copy<T: Magic>(x: T) -> (T, T) { (x, x) }
   |            ^^^^^ required by this bound in `copy`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
